@@ -7,7 +7,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="date"/>
     <field name="amount" sum="Amount"/>
     <field name="party" expand="1"/>
-    <field name="invoice" expand="1"/>
+    <field name="related_to" expand="1"/>
     <field name="account" expand="1"/>
     <field name="description" expand="1"/>
 </tree>
