@@ -1,3 +1,4 @@
+* Use reference field for statement line relation
 * Create default statement journal
 * Add support for Python 3.10
 * Remove support for Python 3.6
